syntax = "proto3";

package com.balkari.menori.rpc.GameCommunication;

import "game/Game.proto";

option java_multiple_files = true;
option java_package = "com.eat.eatplace.rpc";
option java_outer_classname = "GameCommunication";


service GameManager {
  rpc notifyGameStart (GameRequest) returns (GameResponse) {}
  rpc getGame (GameRequest) returns (stream GameResponse) {}
  rpc getGames (stream GameRequest) returns (stream GameResponse) {}
}

message GameRequest {
  int64 userId = 1;
  string gameId = 2;
}

message GameResponse {
  bool isGameStart = 1;
  GameContext.Game game = 2;
}